--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: node_js
 before_install:
   - nvm install 11.6.0
   - nvm use 11.6.0
-  - nvm ls
-  - npm i -g npm@6.5.0
+  - npm install npm@6.5.0
+  - node -v
   - npm -v
 install:
-  - npm install -g
+  - npm install
 script:
-  - npm build  
+  - npm run build  
